[tool.poetry]
name = "pisible"
version = "0.1.0"
description = "Pisible is a tool for automatically building Raspberry Pi OS."
authors = ["shikajiro <shikajiro@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
ansible = "^2.10.4"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pytest = "^6.2.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
